gccida/g1/anti_adjust_stack
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/anti_adjust_stack/src/explow.c:1357:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)( ( ( target_flags & 0x2000000) != 0) + 4), 
  ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/anti_adjust_stack/src/obj/explow.o] Error 1
